--- a/app/src/system_settings/lists/view/list.html
+++ b/app/src/system_settings/lists/view/list.html
@@ -12,7 +12,7 @@
                     
                     <tr md-row md-select="dessert" md-select-id="name" md-auto-select ng-repeat="content in listContent">
                         <td md-cell><md-checkbox aria-label="Checkbox {{content.shortRef}}" ng-model="content.shortRef" ng-click="selectedFile(c)"></md-checkbox></td>
-                        <td md-cell>{{content.displayName}}</td>
+                        <td md-cell>{{content}}</td>
                     </tr>
                 </tbody>
             </table>
