--- a/app/src/system_settings/lists/view/list-rename.html
+++ b/app/src/system_settings/lists/view/list-rename.html
@@ -1,9 +1,9 @@
-<md-dialog aria-label="Tiløj">
-    <form name="addNewForm" ng-submit="addNew()">
+<md-dialog aria-label="Omdøb">
+    <form name="renameForm" ng-submit="rename()">
 
         <md-toolbar>
             <div class="md-toolbar-tools">
-                <h2>{{'COMMON.ADD' | translate}}</h2>
+                <h2>{{'COMMON.RENAME' | translate}}</h2>
                 <span flex></span>
                 <md-button class="md-icon-button" ng-click="cancel()">
                     <i class="material-icons" aria-label="Luk dialogboks">close</i>
@@ -14,12 +14,12 @@
         <md-dialog-content class="md-padding">
             <md-input-container class="md-block">
                 <label>{{'MEMBER.NAME' | translate}}</label>
-                <input ng-model="addNew.title" md-autofocus required>
+                <input ng-model="selectedForRename.title" md-autofocus required>
             </md-input-container>
         </md-dialog-content>
 
         <md-dialog-actions>
-            <md-button type="submit" class="md-primary" ng-disabled="addNewForm.$invalid" aria-label="{{'COMMON.ADD' | translate}}">{{'COMMON.ADD' | translate}}</md-button>
+            <md-button type="submit" class="md-primary" ng-disabled="renameForm.$invalid" aria-label="{{'COMMON.RENAME' | translate}}">{{'COMMON.RENAME' | translate}}</md-button>
         </md-dialog-actions>
     </form>
 </md-dialog>
