--- a/app/src/system_settings/practitioners/view/practitioner-toolbar.html
+++ b/app/src/system_settings/practitioners/view/practitioner-toolbar.html
@@ -1,10 +1,10 @@
 
 <md-button ng-if="!isEditing" ng-click="toggleEdit()">
     <md-icon>edit</md-icon>
-    <span>Rediger</span>
+    <span>{{'COMMON.EDIT' | translate}}</span>
 </md-button>
 
 <md-button ng-if="isEditing" ng-click="toggleEdit(); saveChanges()">
     <md-icon>save</md-icon>
-    <span>Gem</span>
+    <span>{{'COMMON.SAVE' | translate}}</span>
 </md-button>
