--- a/app/src/declaration/view/documents.html
+++ b/app/src/declaration/view/documents.html
@@ -2,7 +2,7 @@
     <md-card ng-repeat="c in content" flex-gt-sm="15" flex='45'>
         <md-checkbox class="document-checkbox" aria-label="Checkbox {{c.shortRef}}" ng-model="c.shortRef" ng-click="selectedFile(c)"></md-checkbox>
         <span ng-click="!isEditing ? viewFile(c) : null">
-            <img ng-src="{{c.thumbnail}}" class="md-card-image">
+            <img ng-src="{{thumbnailUrl(c.thumbnail)}}" class="md-card-image">
             <md-card-content class="document-filename">
                 <span class="md-subhead">{{c.name}}</span>
         </md-card-content>
