--- a/app/src/declaration/view/sections/history.html
+++ b/app/src/declaration/view/sections/history.html
@@ -28,8 +28,8 @@
                 <label>Observation påbegyndt</label>
                 <md-datepicker ng-model="case.observationDate" ng-disabled="!editPatientData"></md-datepicker>
             </md-input-container>
-            <span style="float:right" ng-show="isNumber(case.passiveWait)">
-                {{case.passiveWait}}
+            <span style="float:right" ng-show="isNumber(waitTime.passive)">
+                {{waitTime.passive}}
                 <md-icon class="icon-small">
                     info_outline
                     <md-tooltip md-direction="top">Passiv ventetid</md-tooltip>
@@ -41,8 +41,8 @@
                 <label>Erklæring afgivet</label>
                 <md-datepicker ng-model="case.declarationDate" ng-disabled="!editPatientData"></md-datepicker>
             </md-input-container>
-            <span style="float:right" ng-show="isNumber(case.activeWait)">
-                {{case.activeWait}}
+            <span style="float:right" ng-show="isNumber(waitTime.total)">
+                {{waitTime.active}}
                     <md-icon class="icon-small">
                         info_outline
                         <md-tooltip md-direction="top">Aktiv ventetid</md-tooltip>
@@ -51,8 +51,8 @@
         </div>
         <div layout="row">
             <span flex></span>
-            <span ng-show="isNumber(case.totalWait)">
-                <strong>{{case.totalWait}}</strong>
+            <span ng-show="isNumber(waitTime.total)">
+                <strong>{{waitTime.total}}</strong>
                     <md-icon class="icon-small">
                         info_outline
                         <md-tooltip md-direction="top">Samlet ventetid</md-tooltip>
@@ -62,9 +62,9 @@
 
         <div layout="column">
             <span ng-show="case.closed == 'closed'">Afsluttet</span>
-            <div ng-show="case.closed == 'no-declaration'">
-                <span style="padding-top:16px" ng-show="case.hasOwnProperty('reason')">Afsluttet uden erklæring: {{case.reason}}</span><br>
-                <span style="padding:16px 0" ng-show="case.hasOwnProperty('sentTo')">Sendt til: {{case.sentTo}}</span>
+            <div ng-show="case.closedWithoutDeclaration">
+                <span style="padding-top:16px" ng-show="case.hasOwnProperty('closedWithoutDeclarationReason')">Afsluttet uden erklæring: {{case.closedWithoutDeclarationReason}}</span><br>
+                <span style="padding:16px 0" ng-show="case.hasOwnProperty('closedWithoutDeclarationSentTo')">Sendt til: {{case.closedWithoutDeclarationSentTo}}</span>
             </div>
         </div>
     </md-card-content>
