--- a/app/src/system_settings/practitioners/view/practitioner-list.html
+++ b/app/src/system_settings/practitioners/view/practitioner-list.html
@@ -6,16 +6,16 @@
                     <tr md-row>
                         <th md-column md-order-by="firstName">Navn</th>
                         <th md-column md-numeric md-order-by="GROUP_reopen_cases">Genåbne sager</th>
-                        <th md-column md-numeric md-order-by="GROUP_edit_lists">Redigere lister</th>
-                        <th md-column md-numeric md-order-by="GROUP_assign_roles">Tildele roller</th>
+                        <th md-column md-numeric md-order-by="GROUP_site_retspsyk_SiteListManager">Redigere lister</th>
+                        <th md-column md-numeric md-order-by="GROUP_site_retspsyk_SiteRoleManager">Tildele roller</th>
                     </tr>
                 </thead>
                 <tbody md-body ng-repeat="user in allUsers | orderBy: query.order">
                     <tr md-row>
                         <td md-cell>{{user.firstName}} {{user.lastName}}</td>
-                        <td md-cell><md-checkbox aria-label="genåbne sager" ng-model="user.GROUP_reopen_cases" ng-disabled="!isEditing || (user.userName == 'admin')"></md-checkbox></td>
-                        <td md-cell><md-checkbox aria-label="redigere lister" ng-model="user.GROUP_edit_lists" ng-disabled="!isEditing || (user.userName == 'admin')"></md-checkbox></td>
-                        <td md-cell><md-checkbox aria-label="tildele roller" ng-model="user.GROUP_assign_roles" ng-disabled="!isEditing || (user.userName == 'admin')"></md-checkbox></td>
+                        <td md-cell><md-checkbox aria-label="genåbne sager" ng-model="user.GROUP_site_retspsyk_SiteEntryManager" ng-disabled="!isEditing || (user.userName == 'admin')"></md-checkbox></td>
+                        <td md-cell><md-checkbox aria-label="redigere lister" ng-model="user.GROUP_site_retspsyk_SiteListManager" ng-disabled="!isEditing || (user.userName == 'admin')"></md-checkbox></td>
+                        <td md-cell><md-checkbox aria-label="tildele roller" ng-model="user.GROUP_site_retspsyk_SiteRoleManager" ng-disabled="!isEditing || (user.userName == 'admin')"></md-checkbox></td>
                     </tr>
                 </tbody>
             </table>
