fixed multi download and refactored naming conventions to match backend

--- a/app/src/declaration/view/document-toolbar.html
+++ b/app/src/declaration/view/document-toolbar.html
@@ -3,9 +3,11 @@
 
      <md-button class="md-icon-button" aria-label="download" ng-click="downloadDocuments($event)">
         <md-icon>file_download</md-icon>
+        <md-tooltip md-direction="top" md-delay="500">Download</md-tooltip>
     </md-button> 
     <md-button class="md-icon-button" aria-label="edit" ng-click="deleteDocumentsDialog($event)">
         <md-icon>delete</md-icon>
+        <md-tooltip md-direction="top" md-delay="500">Slet</md-tooltip>
     </md-button>
 </span>
 
