--- a/app/src/declaration/view/lock-dialog.html
+++ b/app/src/declaration/view/lock-dialog.html
@@ -21,7 +21,7 @@
                 <md-autocomplete flex 
             md-selected-item="closeCaseParams.reason" 
             md-search-text="reasonSearch"
-            md-items="reason in dropdownFilter(dropdownOptions['noDeclarationReason'],reasonSearch)" 
+            md-items="reason in propertyFilter(propertyValues['noDeclarationReason'],reasonSearch)" 
             md-item-text="reason" 
             md-min-length="0" 
             md-floating-label="Årsag">
