--- a/app/src/declaration/view/search.html
+++ b/app/src/declaration/view/search.html
@@ -20,6 +20,7 @@
 
             <md-button class="md-icon-button" ng-click="toggleFilters()">
             <md-icon>filter_list</md-icon>
+            <md-tooltip md-direction="top" md-delay="500">Avanceret søgning</md-tooltip>
             </md-button>
         </div>
         <div layout="row" layout-align="center" style="margin-top:16px" ng-click="gotoWaitinglist()">
