--- a/app/src/declaration/view/sections/judgement.html
+++ b/app/src/declaration/view/sections/judgement.html
@@ -12,7 +12,7 @@
         <md-autocomplete flex 
             md-selected-item="case.finalVerdict" 
             md-search-text="finalVerdictSearch"
-            md-items="finalVerdict in dropdownFilter(dropdownOptions['finalVerdict'],finalVerdictSearch)" 
+            md-items="finalVerdict in propertyFilter(propertyValues['finalVerdict'],finalVerdictSearch)" 
             md-item-text="finalVerdict" 
             md-min-length="0" 
             md-floating-label="Endelig dom"
