--- a/app/src/declaration/view/sections/icd-10.html
+++ b/app/src/declaration/view/sections/icd-10.html
@@ -8,7 +8,7 @@
         <md-autocomplete flex 
             md-selected-item="case.diagnosis" 
             md-search-text="diagnosisSearch"
-            md-items="diagnosis in dropdownFilter(dropdownOptions['diagnosis'],diagnosisSearch)" 
+            md-items="diagnosis in propertyFilter(propertyValues['diagnosis'],diagnosisSearch)" 
             md-item-text="diagnosis" 
             md-min-length="0" 
             md-floating-label="Hoveddiagnose"
@@ -22,7 +22,7 @@
             ng-repeat="(index,bd) in case.biDiagnoses"
             md-selected-item="case.biDiagnoses[index]" 
             md-search-text="bidiagnosisSearch[index]"
-            md-items="bidiagnosis in dropdownFilter(dropdownOptions['diagnosis'],bidiagnosisSearch[index])" 
+            md-items="bidiagnosis in propertyFilter(propertyValues['diagnosis'],bidiagnosisSearch[index])" 
             md-item-text="bidiagnosis" 
             md-min-length="0" 
             md-floating-label="Bidiagnose"
