--- a/app/src/declaration/view/waitinglist.html
+++ b/app/src/declaration/view/waitinglist.html
@@ -4,8 +4,8 @@
             <table md-table>
                 <thead md-head md-order="query.order">
                     <tr md-row>
-                        <th md-column md-numeric md-order-by="caseNumber">Sagsnummer</th>
-                        <th md-column md-order-by="fullName">Navn</th>
+                        <th md-column md-numeric md-order-by="caseNumber">{{'DECLARATION.DECLARATION_NUMBER' | translate}}</th>
+                        <th md-column md-order-by="fullName">{{'COMMON.NAME' | translate}}</th>
                         <th md-column md-numeric md-order-by="cprNumber">CPR</th>
                         <th md-column md-numeric md-order-by="creationDate">Oprettet</th>
                         <th md-column md-numeric md-order-by="creationDate">Ventetid (dage)</th>
