--- a/app/src/declaration/view/lock-dialog.html
+++ b/app/src/declaration/view/lock-dialog.html
@@ -3,7 +3,7 @@
 
         <md-toolbar>
             <div class="md-toolbar-tools">
-                <h2>Afslut sagen</h2>
+                <h2>{{'DECLARATION.LOCK_DECLARATION' | translate}}</h2>
                 <span flex></span>
                 <md-button class="md-icon-button" ng-click="cancel()">
                     <i class="material-icons" aria-label="Luk dialogboks">close</i>
@@ -13,8 +13,8 @@
 
         <md-dialog-content class="md-padding">
             <md-radio-group ng-model="closeCaseParams.closed">
-                <md-radio-button value="closed"> Afsluttet</md-radio-button>
-                <md-radio-button value="no-declaration">  Afsluttet uden erklæring</md-radio-button>
+                <md-radio-button value="closed"> {{'DECLARATION.CLOSED' | translate}}</md-radio-button>
+                <md-radio-button value="no-declaration">  {{'DECLARATION.CLOSED_WITHOUT_DECLARATION' | translate}}</md-radio-button>
             </md-radio-group>
 
             <span ng-show="closeCaseParams.closed == 'no-declaration'">
