--- a/app/src/declaration/view/patient-info-toolbar.html
+++ b/app/src/declaration/view/patient-info-toolbar.html
@@ -4,27 +4,31 @@
 </span>
 
 <span ng-if="currentCase.hasOwnProperty('closed') || currentCase.hasOwnProperty('closedWithoutDeclaration')">
-    <md-icon>done</md-icon> Sagen er afsluttet
+    <md-icon>done</md-icon> {{'DECLARATION.DECLARATION_CLOSED' | translate}}
+
+    <md-button class="md-text-icon-button" aria-label="genåben erklæringen" ng-click="lockCaseDialog()" ng-disabled="!canCurrentlyEdit">
+        <md-icon>lock_open</md-icon> {{'DECLARATION.REOPEN' | translate}}
+    </md-button>
 </span>
 
 <span ng-if="!currentCase.hasOwnProperty('closed') && !currentCase.hasOwnProperty('closedWithoutDeclaration')">
 
 <span ng-if="!editMode">
     <md-button class="md-text-icon-button" aria-label="lås sagen" ng-click="lockCaseDialog()" ng-disabled="!canCurrentlyEdit">
-        <md-icon>lock</md-icon> afslut sagen
+        <md-icon>lock</md-icon> {{'DECLARATION.LOCK' | translate}}
     </md-button>
     <md-button class="md-text-icon-button" aria-label="edit" ng-click="toggleEdit()" ng-disabled="!canCurrentlyEdit">
-        <md-icon>edit</md-icon> rediger
+        <md-icon>edit</md-icon> {{'COMMON.EDIT' | translate}}
     </md-button>
 </span>
 
 <span ng-if="editMode">
     <md-button class="md-text-icon-button" aria-label="lås sagen" ng-click="lockCaseDialog()">
-        <md-icon>lock</md-icon> gem og afslut sagen
+        <md-icon>lock</md-icon> {{'DECLARATION.SAVE_AND_LOCK' | translate}}
     </md-button>
 
     <md-button class="md-text-icon-button" aria-label="edit" ng-click="toggleEdit(); saveEdit()">
-        <md-icon>save</md-icon> gem
+        <md-icon>save</md-icon> {{'COMMON.SAVE' | translate}}
     </md-button>
 </span>
 </span>
